Avance en correccion de errores #3