@@ -1,31 +1,31 @@
-package edu.sena.petcare.services.Pet;
+package edu.sena.petcare.services.pet;
 
-import edu.sena.petcare.dto.Pet.PetReadDTO;
 import edu.sena.petcare.dto.Pet.PetCreateDTO;
+import edu.sena.petcare.dto.Pet.PetReadDTO;
 import edu.sena.petcare.dto.Pet.PetUpdateDTO;
 import edu.sena.petcare.mapper.PetMapper;
-import edu.sena.petcare.models.*;
-import edu.sena.petcare.repositories.*;
+import edu.sena.petcare.models.Pet;
+import edu.sena.petcare.models.Race;
+import edu.sena.petcare.models.User;
+import edu.sena.petcare.repositories.PetRepository;
+import edu.sena.petcare.repositories.RaceRepository;
+import edu.sena.petcare.repositories.UserRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
+@RequiredArgsConstructor
 public class PetServiceImpl implements PetService {
 
     private final PetRepository petRepository;
+    private final PetMapper petMapper;
     private final RaceRepository raceRepository;
     private final UserRepository userRepository;
-    private final PetMapper petMapper;
 
-    public PetServiceImpl(PetRepository petRepository, RaceRepository raceRepository, UserRepository userRepository,
-            PetMapper petMapper) {
-        this.petRepository = petRepository;
-        this.raceRepository = raceRepository;
-        this.userRepository = userRepository;
-        this.petMapper = petMapper;
-    }
+    private static final String NOT_FOUND_MSG = "Mascota no encontrada";
 
     @Override
     public PetReadDTO create(PetCreateDTO dto) {
@@ -39,18 +39,19 @@ public class PetServiceImpl implements PetService {
             throw new IllegalArgumentException("idUser cannot be null");
         }
 
-        Race race = raceRepository.findById(dto.getIdRace())
+        Race race = raceRepository.findById(Objects.requireNonNull(dto.getIdRace(), "Race ID cannot be null"))
                 .orElseThrow(() -> new RuntimeException("Raza no encontrada"));
 
-        User user = userRepository.findById(dto.getIdUser())
+        User user = userRepository.findById(Objects.requireNonNull(dto.getIdUser(), "User ID cannot be null"))
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
 
         Pet pet = petMapper.toEntity(dto);
         pet.setRaza(race);
         pet.setUser(user);
 
-        petRepository.save(pet);
-        return petMapper.toDto(pet);
+        @SuppressWarnings("null")
+        Pet savedPet = petRepository.save(pet);
+        return petMapper.toDto(savedPet);
     }
 
     @Override
@@ -62,10 +63,14 @@ public class PetServiceImpl implements PetService {
             throw new IllegalArgumentException("dto cannot be null");
         }
         Pet pet = petRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada"));
+                .orElseThrow(() -> new RuntimeException(NOT_FOUND_MSG));
+
+        // Actualizar campos simples
         petMapper.updateEntity(dto, pet);
-        petRepository.save(pet);
-        return petMapper.toDto(pet);
+
+        @SuppressWarnings("null")
+        Pet updatedPet = petRepository.save(pet);
+        return petMapper.toDto(updatedPet);
     }
 
     @Override
@@ -74,7 +79,7 @@ public class PetServiceImpl implements PetService {
             throw new IllegalArgumentException("id cannot be null");
         }
         Pet pet = petRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada"));
+                .orElseThrow(() -> new RuntimeException(NOT_FOUND_MSG));
         String currentMicrochip = pet.getMicrochip() != null ? pet.getMicrochip() : "";
         pet.setMicrochip(currentMicrochip + "_INACTIVA");
         petRepository.save(pet);
@@ -85,9 +90,9 @@ public class PetServiceImpl implements PetService {
         if (id == null) {
             throw new IllegalArgumentException("id cannot be null");
         }
-        Pet pet = petRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Mascota no encontrada"));
-        return petMapper.toDto(pet);
+        return petRepository.findById(id)
+                .map(petMapper::toDto)
+                .orElseThrow(() -> new RuntimeException(NOT_FOUND_MSG));
     }
 
     @Override
@@ -98,6 +103,6 @@ public class PetServiceImpl implements PetService {
         return petRepository.findAll().stream()
                 .filter(p -> p.getUser() != null && userId.equals(p.getUser().getId()))
                 .map(petMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
