@@ -1,15 +1,15 @@
-package edu.sena.petcare.services.VaccinationHistory;
+package edu.sena.petcare.services.vaccinationhistory;
 
 import edu.sena.petcare.dto.VaccinationHistory.VaccinationHistoryCreateDTO;
 import edu.sena.petcare.dto.VaccinationHistory.VaccinationHistoryReadDTO;
 import edu.sena.petcare.dto.VaccinationHistory.VaccinationHistoryUpdateDTO;
+import edu.sena.petcare.exceptions.ResourceNotFoundException;
 import edu.sena.petcare.mapper.VaccinationHistoryMapper;
 import edu.sena.petcare.models.VaccinationHistory;
 import edu.sena.petcare.repositories.VaccinationHistoryRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class VaccinationHistoryServiceImpl implements VaccinationHistoryService {
@@ -28,7 +28,9 @@ public class VaccinationHistoryServiceImpl implements VaccinationHistoryService 
             throw new IllegalArgumentException("dto cannot be null");
         }
         VaccinationHistory vaccine = mapper.toEntity(dto);
-        return mapper.toDto(repository.save(vaccine));
+        @SuppressWarnings("null")
+        VaccinationHistory savedVaccine = repository.save(vaccine);
+        return mapper.toDto(savedVaccine);
     }
 
     @Override
@@ -40,9 +42,11 @@ public class VaccinationHistoryServiceImpl implements VaccinationHistoryService 
             throw new IllegalArgumentException("dto cannot be null");
         }
         VaccinationHistory vaccine = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Vacuna no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("Vacuna no encontrada"));
         mapper.updateEntity(dto, vaccine);
-        return mapper.toDto(repository.save(vaccine));
+        @SuppressWarnings("null")
+        VaccinationHistory savedVaccine = repository.save(vaccine);
+        return mapper.toDto(savedVaccine);
     }
 
     @Override
@@ -51,7 +55,7 @@ public class VaccinationHistoryServiceImpl implements VaccinationHistoryService 
             throw new IllegalArgumentException("id cannot be null");
         }
         if (!repository.existsById(id)) {
-            throw new RuntimeException("Vacuna no encontrada para eliminar");
+            throw new ResourceNotFoundException("Vacuna no encontrada para eliminar");
         }
         repository.deleteById(id);
     }
@@ -63,13 +67,13 @@ public class VaccinationHistoryServiceImpl implements VaccinationHistoryService 
         }
         return repository.findById(id)
                 .map(mapper::toDto)
-                .orElseThrow(() -> new RuntimeException("Vacuna no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("Vacuna no encontrada"));
     }
 
     @Override
     public List<VaccinationHistoryReadDTO> getAll() {
         return repository.findAll().stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
